<resources>
    <string name="app_name">SweetHome</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="password_confirm">Re-enter Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_prompt">Already have an account?\t</string>
    <string name="sign_up_prompt">Don\'t have an account?\t</string>
    <string name="forgot_password">Forgot your password?\t</string>
    <string name="send_email">Send Email</string>
    <string name="back_to_login">Go back to\t</string>
    <string name="item_name">Item Name</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="cad_currency">CAD $</string>
    <string name="add_item">Add New</string>
    <string name="total">Total Estimated Value:\t\t\t\t\t CAD $</string>
    <string name="item_tag">Tag</string>
    <string name="search_hint">Search...</string>
    <string name="search_icon">Search Icon</string>
    <string name="add_tag">Add Tag</string>
    <string name="delete">Delete</string>
    <string name="create_tag">Create Tag</string>
    <string name="sort_most_recent">Newest</string>
    <string name="sort_least_recent">Oldest</string>
    <string name="sort_highest_value">Highest value</string>
    <string name="sort_lowest_value">Lowest Value</string>
    <string name="sort_make_az">Make: A - Z</string>
    <string name="sort_make_za">Make: Z - A</string>
    <string name="sort_description_az">Description: A - Z</string>
    <string name="sort_description_za">Description: Z - A</string>
    <string name="sort_tags_az">Tags: A - Z</string>
    <string name="sort_tags_za">Tags: Z - A</string>
    <string name="apply_filter">Apply</string>
    <string name="logout">Logout</string>
    <string-array name="sort_options">
        <item>@string/sort_most_recent</item>
        <item>@string/sort_least_recent</item>
        <item>@string/sort_highest_value</item>
        <item>@string/sort_lowest_value</item>
        <item>@string/sort_make_az</item>
        <item>@string/sort_make_za</item>
        <item>@string/sort_description_az</item>
        <item>@string/sort_description_za</item>
        <item>@string/sort_tags_az</item>
        <item>@string/sort_tags_za</item>
    </string-array>
</resources>