<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="@color/darkGrey"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <EditText
        android:id="@+id/search_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/search_hint"
        android:background="@drawable/search_bg"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:drawablePadding="10dp"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/app_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinner_sort_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/spinner_bg"
        android:spinnerMode="dropdown"
        android:dropDownSelector="@drawable/spinner_bg"
        android:popupBackground="@drawable/spinner_bg"
        android:layout="@layout/custom_spinner"
        app:layout_constraintTop_toBottomOf="@+id/search_input"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/filter_button"
        android:layout_width="30sp"
        android:layout_height="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:foreground="@android:drawable/ic_menu_sort_by_size"
        app:backgroundTint="@android:color/white"
        app:borderWidth="3dp"
        app:layout_constraintTop_toBottomOf="@+id/search_input"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0"
        />

    <LinearLayout
        android:id="@+id/filter_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/filter_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/calendar_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Date range"
                android:textColor="@color/black"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                />
            <Button
                android:id="@+id/calendar_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                android:backgroundTint="@color/white"
                android:layout_gravity="center_vertical"
                app:cornerRadius="20dp"
                app:strokeColor="@color/grey"
                app:strokeWidth="1dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/keyword_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Keywords"
                android:paddingBottom="4dp"
                android:textColor="@color/black"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                />
            <EditText
                android:id="@+id/keyword_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/search_hint"
                android:padding="5dp"
                android:background="@drawable/search_bg"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:layout_gravity="center_vertical"
                app:cornerRadius="10dp"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/make_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Make"
                android:paddingBottom="4dp"
                android:textColor="@color/black"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                />
            <EditText
                android:id="@+id/make_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/search_hint"
                android:padding="5dp"
                android:background="@drawable/search_bg"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:layout_gravity="center_vertical"
                app:cornerRadius="10dp"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tags_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tags"
                android:paddingBottom="4dp"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                />
            <Spinner
                android:id="@+id/tag_field"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/search_bg"
                android:spinnerMode="dropdown"
                android:dropDownSelector="@drawable/search_bg"
                android:popupBackground="@drawable/search_bg"
                android:layout_gravity="center_vertical"
                app:cornerRadius="20dp"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp"
                />


        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/total_estimated_value_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_panel"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/total_estimated_value_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="10dp"
        android:text="@string/total"
        android:textColor="@color/darkGrey"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </TextView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/tag_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:layout_marginTop="527dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@android:drawable/ic_menu_edit"
        android:foregroundGravity="center"
        android:foregroundTint="@color/beige"
        android:foregroundTintMode="src_atop"
        app:backgroundTint="@color/darkGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_list"
        app:layout_constraintVertical_bias="0.79"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delete_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:clickable="true"
        android:foreground="@android:drawable/ic_menu_delete"
        android:foregroundGravity="center"
        android:foregroundTint="@color/beige"
        android:foregroundTintMode="src_atop"
        app:backgroundTint="#BC0416"
        app:layout_constraintBottom_toTopOf="@+id/tag_action_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89"/>
</androidx.constraintlayout.widget.ConstraintLayout>
